18_reverse_str/grade.txt
Grading at Tue Feb 16 01:35:46 UTC 2021
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:12:9: error: unused variable ‘ptr’ [-Werror=unused-variable]
   char *ptr = str;
         ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
